--- a/project-10/index.css
+++ b/project-10/index.css
@@ -84,3 +84,65 @@
     cursor: pointer;
     margin-left: 10px;
 }
+
+.modal {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #f5f5f5;
+    opacity: 0.4;
+    display: none;
+}
+
+.box-activity {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    position: relative;
+    display: none;
+    z-index: 1;
+}
+
+.repair-activity {
+    width: 30%;
+    background-color: #334ee9;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    padding: 50px 20px;
+    position: absolute;
+    top: -130px;
+}
+
+.activity {
+    width: 70%;
+    padding: 12px 18px;
+    outline: none;
+    border-radius: 5px;
+    border: 1px solid gainsboro;
+}
+
+.btn-control {
+    display: flex;
+    justify-content: space-between;
+    width: 70%;
+    padding-top: 30px;
+}
+
+.btn {
+    padding: 12px 25px;
+    border-radius: 3px;
+    border: none;
+    cursor: pointer;
+}
+
+.btn:hover {
+    background-color: aqua;
+    color: white
+}
